test_programs/compile_failure/globals_do_not_accept_turbofish/src/main.nr
global x: Field = 1;

fn main() {
    let _ = x::<hello, world>;
}
